# gha-repo-manager

./: .all-contributorsrc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  Makefile  README.md  action.yml  main.py  noxfile.py  package-requirements.txt  pyproject.toml  pytest.ini  release-please-config.json  requirements-dev.txt
.github/: dependabot.yml  settings.yml
.github/actions/: codeql.yml  generate-docs.yml  integration.yml  lint.yml
.github/scripts/: README.md  generate_inputs.py  replace.sed  replace_inputs.sh
.github/workflows/: action-integration.yml  codeql.yml  dependabot-auto-merge.yml  generate-docs.yml  integration.yml  issues.yml  lint.yml  python-ci.yml  python.yml  release-docker-images.yml  release-major-version-tag.yml  release-please.yml  release.yml  repo-config.yml  test-docker-image.yml  unit-test.yml
Docker/: ActionDockerfile.j2  Dockerfile
Docker/builder/rootfs/: requirements.txt
docs/: tips.md
examples/: settings.yml
repo_manager/: main.py
repo_manager/gh/: __init__.py  branch_protections.py  collaborators.py  environments.py  files.py  labels.py  repos.py  secrets.py  settings.py  variables.py
repo_manager/github/: __init__.py  branch_protections.py  collaborators.py  environments.py  files.py  labels.py  repos.py  secrets.py  settings.py  variables.py
repo_manager/schemas/: __init__.py  branch_protection.py  collaborator.py  environment.py  file.py  label.py  secret.py  settings.py
repo_manager/utils/: __init__.py  _inputs.py
tests/unit/github/: test_files.py
tests/unit/schemas/: test_file.py  test_label.py  test_secret.py
